# tic_tac_toe

./: CMakeLists.txt  README.md
haskell/: Main.hs  header.h
haskell/tic_tac_toe/app/: Main.hs
include/: game.h  rendering.h
src/: game.c  logic.c  main.c  rendering.c
